# germinate-ai

./: .dockerignore  .env.example  .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docker/: api.Dockerfile  coordinator.Dockerfile
docs/: index.md  main-ideas.md  quickstart.md
docs/reference/: coordinator.md  memory.md  message-bus.md  utils.md  worker.md
docs/reference/core/: loader.md  misc.md  states.md  tasks.md  workflows.md
docs/reference/data/: database.md  models.md  repositories.md  schemas.md
germinate_ai/cli/: cli.py  run_workflow.py
germinate_ai/config/: config.py
germinate_ai/coordinator/: __init__.py  coordinator.py  main.py  scheduler.py
germinate_ai/core/: __init__.py  exceptions.py  loader.py  workflows.py
germinate_ai/core/states/: __init__.py  conditions.py  states.py  transitions.py
germinate_ai/core/tasks/: __init__.py  algorithms.py  base.py  decorators.py  definition.py  registry.py
germinate_ai/data/: database.py
germinate_ai/data/models/: __init__.py  enums.py  states.py  tasks.py  workflow_runs.py
germinate_ai/data/repositories/: states_repository.py  tasks_repository.py  workflow_runs_repository.py
germinate_ai/data/schemas/: __init__.py  jobs.py  messages.py  tasks.py  workflow_runs.py  workflows.py
germinate_ai/memory/: kv.py  weaviate.py
germinate_ai/message_bus/: __init__.py  factories.py  message_channels.py  message_queue.py
germinate_ai/message_bus/nats/: __init__.py  connection.py  consumer.py
germinate_ai/toolbox/: chains.py
germinate_ai/utils/: di.py  helpers.py  llms.py  pickler.py
germinate_ai/worker/: main.py  task_dispatcher.py  worker.py
germinate_ai/workflows/metagpt/: __init__.py  main.py
main-ideas/: index.html
quickstart/: index.html
reference/coordinator/: index.html
reference/core/loader/: index.html
reference/core/misc/: index.html
reference/core/states/: index.html
reference/core/tasks/: index.html
reference/core/workflows/: index.html
reference/memory/: index.html
reference/message-bus/: index.html
reference/utils/: index.html
reference/worker/: index.html
search/: search_index.json
tests/core/: test_workflow_spec.py
tests/messages/: test_message_queue.py
user-guide/configuration/: index.html
user-guide/create-a-new-workflow/: index.html
user-guide/custom-tasks/: index.html
user-guide/getting-started/: index.html
user-guide/run-workflow/: index.html
user-guide/specifying-state-transitions/: index.html
user-guide/states-tasks-dags/: index.html
(+14 files in other folders)
